fix: check duplicated terms type
